# vector-logic

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
benchmarks/: performance.py
examples/: basic_usage.py  importation_exportation_example.py  rainy_day_scenario.py
rule_engine/: __init__.py  engine.py  helpers.py  rule_converter.py  rule_parser.py  state_vector.py  t_object.py
tests/: test_engine.py  test_helpers.py  test_rule_converter.py  test_rule_parser.py  test_state_vector.py  test_t_object.py
vectorlogic/: __init__.py  engine.py  helpers.py  rule_parser.py  state_vector.py  t_object.py
