[project]
name = "rule-engine"
version = "0.1.0"
description = "A library for a simple rule engine."
authors = [
    { name = "Dmitry Lesnik", email = "dmitry@stratyfy.com" }
]
readme = "README.md"
license = "MIT"
keywords = ["rule-engine", "rules", "business-rules", "logic"]
homepage = "https://github.com/dmitry-lesnik/rule-engine"
repository = "https://github.com/dmitry-lesnik/rule-engine"


[tool.poetry]
packages = [{ include = "rule_engine" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyparsing = "^3.2.5"
numpy = ">=1.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^25.9.0"
yappi = "*"
matplotlib = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120



