[project]
name = "rule-engine"
version = "0.1.0"
description = "A library for a simple rule engine."
authors = [
    { name = "Dmitry Lesnik", email = "dmitry@stratyfy.com" }
]
readme = "README.md"
license = "MIT"
keywords = ["rule-engine", "rules", "business-rules", "logic"]
homepage = "https://github.com/dmitry-lesnik/rule-engine"
repository = "https://github.com/dmitry-lesnik/rule-engine"


[tool.poetry]
packages = [{ include = "rule_engine" }]

[tool.poetry.dependencies]
python = "^3.9"
pyparsing = "^3.0.0"
numpy = ">=1.26.4, <3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.0.0" # Corrected to a realistic version

[tool.poetry.group.profiling]
optional = true
dependencies = { yappi = "^1.5.0" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
